--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aitao-web",
+  "name": "webpack-config",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/SaebaRyoo/aitao-web.git",
+  "repository": "https://github.com/SaebaRyoo/webpack-config.git",
   "author": "SaebaRyoo <yuanddmail@163.com>",
   "license": "Apache-2.0",
   "scripts": {
@@ -11,7 +11,14 @@
     "build-prod": "webpack --mode production",
     "test": "jest",
     "start": "webpack serve --hot --mode development",
-    "lint": "eslint --ext .tsx,.ts,.js src/"
+    "lint": "eslint --ext .tsx,.ts,.js src/",
+    "prettier": "prettier -c --write \"src/**/*\""
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "npm run lint",
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -38,15 +45,18 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
     "jest": "^29.2.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
