--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "baseUrl": ".",
     "paths": {
       "@/src/*": ["src/*"],
+      "@/public/*": ["public/*"],
     }
   },
   "exclude": ["node_modules", "dist"]
