--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "lint": "eslint --ext .tsx,.ts,.js src/",
     "prettier": "prettier -c --write \"src/**/*\""
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "npm run lint",
     "**/*.{js,jsx,tsx,ts,less,md,json}": [
@@ -41,6 +46,7 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
