--- a/package.json
+++ b/package.json
@@ -11,17 +11,13 @@
     "build-prod": "webpack --mode production",
     "test": "jest",
     "start": "webpack serve --hot --mode development",
-    "lint": "eslint --ext .tsx,.ts,.js",
-    "prettier": "prettier -c --write \"src/**/*\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "lint": "eslint --ext .tsx,.ts,.js src/",
+    "prettier": "prettier -c --write \"src/**/*\"",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": "npm run lint",
-    "src/**/*.{js,jsx,tsx,ts,less,md,json}": [
+    "**/*.{js,jsx,ts,tsx}": "npm run lint",
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
       "prettier --write"
     ]
   },
@@ -48,7 +44,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
