--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "**/*.{js,jsx,ts,tsx}": "npm run lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loadable": "^5.5.0",
-    "react-router-dom": "^6.4.2"
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
@@ -36,7 +38,6 @@
     "@types/lodash": "^4.14.186",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@types/react-loadable": "^5.5.6",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "autoprefixer": "^10.4.12",
