--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "Apache-2.0",
   "scripts": {
     "clean": "rm dist/bundle.js",
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production",
+    "build-dev": "cross-env REACT_APP_ENV=dev webpack --mode development",
+    "build-prod": "cross-env REACT_APP_ENV=prod webpack --mode production",
     "test": "jest",
-    "start": "webpack serve --hot --mode development",
+    "start": "cross-env REACT_APP_ENV=dev webpack serve --hot --mode development",
     "lint": "eslint --ext .tsx,.ts,.js src/",
     "prettier": "prettier -c --write \"src/**/*\"",
     "prepare": "husky install"
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.1.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,6 +45,7 @@
     "babel-jest": "^29.2.1",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
