--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "cross-env REACT_APP_ENV=dev webpack --config webpack.dev.js --mode development",
     "build-prod": "cross-env REACT_APP_ENV=prod webpack --config webpack.prod.js --mode production",
-    "test": "jest",
     "start": "cross-env REACT_APP_ENV=dev webpack serve --config webpack.dev.js --hot --mode development",
+    "test": "jest",
     "lint": "eslint --ext .tsx,.ts,.js src/",
     "prettier": "prettier -c --write \"src/**/*\"",
     "prepare": "husky install"
@@ -36,6 +36,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@types/lodash": "^4.14.186",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -52,6 +54,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "file-loader": "^6.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "jest": "^29.2.1",
