--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "cross-env REACT_APP_ENV=dev webpack --config webpack.dev.js --mode development",
     "build-prod": "cross-env REACT_APP_ENV=prod webpack --config webpack.prod.js --mode production",
+    "build-dll": "webpack --config webpack.dll.js",
     "start": "cross-env REACT_APP_ENV=dev webpack serve --config webpack.dev.js --hot --mode development",
     "test": "jest",
     "lint": "eslint --ext .tsx,.ts,.js src/",
@@ -54,9 +55,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "glob": "^8.0.3",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "image-minimizer-webpack-plugin": "^3.7.0",
+    "imagemin": "^8.0.1",
     "jest": "^29.2.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
@@ -64,7 +69,10 @@
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
+    "purgecss-webpack-plugin": "4.1.3",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "url-loader": "^4.1.1",
