--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
   // 保存时-自动格式化 - 启用eslint
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true, // 每次保存的时候将代码按eslint格式进行修复
-  },
+    "source.fixAll.eslint": true // 每次保存的时候将代码按eslint格式进行修复
+  }
+  // "files.watcherInclude": ["src"]
+  // "editor.formatOnSave": true,
+  // "prettier.requireConfig": true,
+  // "editor.defaultFormatter": "esbenp.prettier-vscode",
+  // "typescript.tsdk": "node_modules/typescript/lib"
 }
