--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "glob": "^8.0.3",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
-    "image-minimizer-webpack-plugin": "^3.7.0",
+    "image-webpack-loader": "^8.1.0",
     "imagemin": "^8.0.1",
     "jest": "^29.2.1",
     "less": "^4.1.3",
